--- a/mpesa_app/templates/layout.html
+++ b/mpesa_app/templates/layout.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="{% url 'mpesa_app:token' %}">Token</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {% if navbar == 'stk' %} activated {% endif %}" href="{% url 'mpesa-app:stk' %}">Pay here</a>
+          <a class="nav-link {% if navbar == 'stk' %} activated {% endif %}" href="{% url 'mpesa_app:stk' %}">Pay here</a>
         </li>
         </ul>
 
